<resources>
    <string name="module_name">Core</string>
    <string name="app_name" translatable="false">WayaPay</string>
    <string name="package_name">com.wayapaychat</string>
    <string name="formatted_money">₦ %s</string>
    <string name="cash_text">Cash</string>
    <string name="button_end_trip_text">End Trip</string>
    <string name="ride_finished_text">Ride Finished!</string>
    <string name="or_try_ussd_text">Or Try USSD</string>
    <string name="rate_your_pilot">Rate Your Pilot</string>
    <string name="add_additional_comment_hint">Add Additional comment</string>
    <string name="button_done_text">Done</string>
    <string name="home">Home</string>
    <string name="promotions">Promotions</string>
    <string name="account">Account</string>
    <string name="NG">NG</string>
    <string name="NGN_formatter">NGN %s</string>
    <string name="was_payment_successful_text">Was payment successful?</string>
    <string name="yes_rb_text">Yes</string>
    <string name="no_rb_text">No</string>
    <string name="collect_cash_formatter">Collect Cash from %s!</string>
    <string name="do_not_collect_cash_text">Do not Collect Cash!</string>
    <string name="type_card_trip_text">Type: Card Trip</string>
    <string name="default_notification_channel_id">com.wayapaychat.ng.channel_id</string>
    <string name="default_chanel_name">General</string>
    <string name="general_settings_text">General Settings</string>
    <string name="fcm_message">Wayapaychat</string>
    <string name="preference_file_key" translatable="false">com.example.myapp.USER_PREFERENCE_FILE_KEY</string>
    <string name="selected_page_key" translatable="false">selected_page_key</string>
    <string name="user_id_key" translatable="false">user_id_key</string>
    <string name="has_viewed_interest_key" translatable="false">viewed_interest_Key</string>
    <string name="landing_page_key" translatable="false">landing_page_key</string>
    <string name="is_corporate_key" translatable="false">is_corporate_key</string>
    <string name="email_key" translatable="false">email_key</string>
    <string name="phone_number_key" translatable="false">phone_number_key</string>
    <string name="first_last_name_key" translatable="false">phone_number_key</string>
    <string name="token_key" translatable="false">token_key</string>
    <string name="is_signed_in_key" translatable="false">is_signed_in_key</string>
    <string name="ride_cancelled_notification_message">Ride Request has been cancelled</string>
    <string name="ride_picked_up_notification_message">Your Trip has started</string>
    <string name="pending_pickup_notification_message">Your Pilot has arrived</string>
    <string name="ride_dropped_off_notification_message">Your Ride has ended</string>
    <string name="ride_created_notification_message">You have a new Ride Request</string>
    <string name="auth_come">com.wayapaychat.auth.home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">Note</string>
    <string name="deduct_message"> Dear customer, a charge of N10 will be deducted from your card to validate it’s authenticity. The money deducted will be added back to your wallet</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
    <string name="dial_ussd_code">Dial USSD Code</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="welcome_to_financial_freedom">Welcome to Financial Freedom</string>
    <string name="get_started">Get Started</string>
    <string name="new_here_signup">New here? Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_phone_number_username">Email/Phone number/Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="register">Register</string>
    <string name="by_signing_up_you_agree_with_the_terms_and_coditions">By signing up, you agree with the terms and conditions</string>
    <string name="surname">Surname</string>
    <string name="firstname">First Name</string>
    <string name="your_firstname">Your First-Name</string>
    <string name="your_surname">Your Surname</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_cont">Register cont.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="explanation">Password must be at least 8 character and contain 1 Number, Special case, Upper case and Lower case</string>
    <string name="enter_your_secure_pin">Enter your secure pin</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="an_otp_has_been_sent">A one time verification code has been sent to your number/mail.</string>
    <string name="verify">Verify</string>
    <string name="create_pin">Create a secure pin</string>
    <string name="keep_your_pin">Keep your account safe with a secure pin</string>
    <string name="input_pin">Input PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="confirm_new_pin">Confirm new PIN</string>
    <string name="pin_set">Your PIN is set</string>
    <string name="you_can_sign_in_with_pin">You can sign in and out of your account with your secure PIN</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_your_details">Please enter your details, we will send you a verification code to reset your password</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="enter_otp">Enter OTP Code</string>
    <string name="we_have_sent_a_verification_code_for_you_to_reset_your_password">We have sent a verification code for you to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="Successful">Successful</string>
    <string name="your_password_has_been_reset_successfully">Your Password has been reset successfully</string>
    <string name="login">Login</string>
    <string name="buy">Buy</string>
    <string name="update_profile">Update Profile</string>
    <string name="save">Save</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="middle_name">Middle Name</string>
    <string name="date_of_birth">Date of Birth (22/12/2020)</string>
    <string name="gender">Gender</string>
    <string name="District_state">District/State</string>
    <string name="address">Address</string>
    <string name="bvn">Bank Verification Number (BVN)</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_account_number">Account Number</string>
    <string name="logout">LOGOUT</string>
    <string name="my_fullname">My FullName</string>
    <string name="earn_with_wayapaychat">Earn with WayaPaychat</string>
    <string name="my_account">My Account</string>
    <string name="discover_people">Discover People</string>
    <string name="create_group_and_page">Create Group and Page</string>
    <string name="qr_code">QR Code</string>
    <string name="interests">Interests</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy"><a href="https://www.wayapaychat.com/terms-of-use">Privacy Policy</a></string>
    <string name="privacy_security_text">Privacy, Security</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="discover">Discover</string>
    <string name="wallet">Wallet</string>
    <string name="notifications">Notifications</string>
    <string name="activity">Activity</string>
    <string name="t1_text">T1: Upgrade your account to do larger transactions</string>
    <string name="edit_profile_description">Profile image, name  e.t.c</string>
    <string name="other_details">Other Details</string>
    <string name="other_details_description">Address, Email</string>
    <string name="other_details_information_text">Address, Utility Bill</string>
    <string name="credentials">Credentials</string>
    <string name="credentials_description">International passport, BVN, ID Card, NIN</string>
    <string name="login_information">Login Information</string>
    <string name="login_information_description">Location, device, time of login</string>
    <string name="profile">Profile</string>
    <string name="chat_text">Chat</string>
    <string name="chat_description">Themes, font size</string>
    <string name="username">Username</string>
    <string name="previous_password">Enter previous password</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="check_one_of_inputs">Please check your inputs to be sure they are correct</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="device">Device</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="airtime">Airtime</string>
    <string name="data">Data</string>
    <string name="utility_bills">Utility Bills</string>
    <string name="bet">Betting</string>
    <string name="transfer_funds">Send</string>
    <string name="receive_funds">Receive</string>
    <string name="withdraw_funds">Withdraw</string>
    <string name="payment_request">Request</string>
    <string name="create_new_wallet">Create new wallet account</string>
    <string name="link_card_bank">Link Card</string>
    <string name="view_link_cards">view linked cards</string>
    <string name="view_link_banks">View linked banks</string>
    <string name="link_bank">Link Bank</string>
    <string name="link_bvn">Link BVN</string>
    <string name="disable_wallet">Disable Wallet</string>
    <string name="all_wallet">View Wallets</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="bank_card">Bank Card</string>
    <string name="pay_merchant">Pay Merchant</string>
    <string name="personal_account_transfer">Personal Account</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="ussd">USSD</string>
    <string name="single_string_concat">%s</string>
    <string name="name">Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="account_name">Account Name</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="scan_to_pay">Scan to pay</string>
    <string name="confirm">Confirm</string>
    <string name="amount">Amount</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="to">To</string>
    <string name="transaction_fee">Transaction Fee:</string>
    <string name="beneficiary_bank">Beneficiary bank</string>
    <string name="description">Description</string>
    <string name="input_pin_message">Please input your 4 digit pin to complete \n transaction</string>
</resources>