<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_white_solid"
            android:padding="@dimen/dimen_20">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:fontFamily="@font/libre_baskerville"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_15"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/title"
                app:srcCompat="@drawable/ic_baseline_clear_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/message"
                android:layout_width="@dimen/dimen_300"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:gravity="center"
                android:text="@string/deduct_message"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:gravity="center_vertical"
                android:text="@string/cancel"
                android:visibility="gone"
                app:fontFamily="@font/lato_regular"
                app:layout_constraintLeft_toLeftOf="@id/message"
                app:layout_constraintTop_toBottomOf="@+id/message"
                app:textAllCaps="true" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/continue_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:gravity="center_vertical"
                android:text="@string/cont"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                app:fontFamily="@font/lato_regular"
                app:layout_constraintRight_toRightOf="@id/message"
                app:layout_constraintTop_toBottomOf="@+id/message"
                app:textAllCaps="true" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dial_ussd_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:gravity="center"
                android:text="@string/dial_ussd_code"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                app:fontFamily="@font/lato_regular"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message"
                app:textAllCaps="false" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>
