<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.wayapaychat.ng.payment.model.PaymentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".fragments.AddBankFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/bank_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <EditText
                android:id="@+id/account_number"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_number"
                android:theme="@style/EditTextTheme"
                android:inputType="number"/>


            <EditText
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:inputType="textCapWords"
                android:theme="@style/EditTextTheme"
                android:hint="@string/account_name"/>


            <EditText
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme"
                android:hint="@string/password"/>

            <Button
                android:layout_marginTop="32dp"
                android:id="@+id/add_bank_button"
                android:layout_width="match_parent"
                android:text="@string/add_bank_account"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>
</layout>