<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.completeTransaction.ConfirmTransactionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back_IV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_arrow_black" />

        <TextView
            style="@style/WayaAppText.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_to_pay"
            android:textSize="@dimen/text_16"
            app:layout_constraintBottom_toBottomOf="@id/back_IV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_IV" />

        <View
            android:id="@+id/header_divider_V"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/ash"
            app:layout_constraintTop_toBottomOf="@id/back_IV" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/header_divider_V"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/center_GL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/left_GL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="30dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/right_GL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="30dp" />

                <TextView
                    android:id="@+id/beneficiary_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/left_GL"
                    android:layout_marginTop="16dp"
                    style="@style/WayaAppText"
                    android:textColor="@color/ash_text"
                    android:text="@string/beneficiary"/>

                <TextView
                    android:id="@+id/beneficiary_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/beneficiary_title_TV"
                    app:layout_constraintStart_toEndOf="@id/left_GL"
                    android:layout_marginTop="8dp"
                    style="@style/WayaAppText"
                    android:textSize="@dimen/text_16"
                    tools:text="Stanley Toju"
                    android:textColor="@color/textBlue"/>

                <TextView
                    android:id="@+id/amount_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/right_GL"
                    android:layout_marginTop="16dp"
                    style="@style/WayaAppText"
                    android:textColor="@color/ash_text"
                    android:text="@string/amount"/>

                <TextView
                    android:id="@+id/amount_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/amount_title_TV"
                    app:layout_constraintEnd_toStartOf="@id/right_GL"
                    android:layout_marginTop="8dp"
                    style="@style/WayaAppText.Header"
                    android:textSize="@dimen/text_16"
                    tools:text="N40,000"
                    android:textColor="@color/textBlue"/>

                <View
                    android:id="@+id/content_divider_V"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="22dp"
                    android:background="@color/ash"
                    app:layout_constraintTop_toBottomOf="@id/beneficiary_TV" />

                <TextView
                    android:id="@+id/account_number_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/content_divider_V"
                    app:layout_constraintStart_toEndOf="@id/left_GL"
                    android:layout_marginTop="24dp"
                    style="@style/WayaAppText"
                    android:textColor="@color/ash_text"
                    android:text="@string/to"/>

                <TextView
                    android:id="@+id/account_number_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/account_number_title_TV"
                    app:layout_constraintStart_toEndOf="@id/left_GL"
                    android:layout_marginTop="8dp"
                    style="@style/WayaAppText"
                    android:textSize="@dimen/text_16"
                    tools:text="0190974311"
                    android:textColor="@color/textBlue"/>

                <TextView
                    android:id="@+id/transaction_fee_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/content_divider_V"
                    app:layout_constraintEnd_toStartOf="@id/right_GL"
                    android:layout_marginTop="24dp"
                    style="@style/WayaAppText"
                    android:textColor="@color/ash_text"
                    android:text="@string/transaction_fee"/>

                <TextView
                    android:id="@+id/transaction_fee_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/transaction_fee_title_TV"
                    app:layout_constraintEnd_toStartOf="@id/right_GL"
                    android:layout_marginTop="8dp"
                    style="@style/WayaAppText"
                    android:textSize="@dimen/text_16"
                    tools:text="N10.00"
                    android:textColor="@color/textBlue"/>

                <TextView
                    android:id="@+id/beneficiary_bank_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/account_number_TV"
                    app:layout_constraintStart_toEndOf="@id/left_GL"
                    android:layout_marginTop="22dp"
                    style="@style/WayaAppText"
                    android:textColor="@color/ash_text"
                    android:text="@string/beneficiary_bank"/>

                <TextView
                    android:id="@+id/beneficiary_bank_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/beneficiary_bank_title_TV"
                    app:layout_constraintStart_toEndOf="@id/left_GL"
                    android:layout_marginTop="8dp"
                    style="@style/WayaAppText"
                    android:textSize="@dimen/text_16"
                    android:text="Rubies"
                    android:textColor="@color/textBlue"/>

                <TextView
                    android:id="@+id/description_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/transaction_fee_TV"
                    app:layout_constraintEnd_toStartOf="@id/right_GL"
                    android:layout_marginTop="22dp"
                    style="@style/WayaAppText"
                    android:textColor="@color/ash_text"
                    android:text="@string/description"/>

                <TextView
                    android:id="@+id/description_TV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/description_title_TV"
                    app:layout_constraintEnd_toStartOf="@id/right_GL"
                    app:layout_constraintStart_toEndOf="@id/center_GL"
                    android:layout_marginTop="8dp"
                    style="@style/WayaAppText"
                    android:textSize="@dimen/text_16"
                    tools:text="Internet Data"
                    android:textColor="@color/textBlue"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/pin_instructions_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/description_TV"
                    android:layout_marginStart="56dp"
                    android:layout_marginEnd="56dp"
                    android:layout_marginTop="38dp"
                    android:text="@string/input_pin_message"
                    android:gravity="center"
                    android:textColor="@color/primary_text_color"/>

                <com.mukesh.OtpView
                    android:id="@+id/pin_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/pin_instructions_TV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="80dp"
                    android:clickable="false"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:OtpItemCount="4"
                    app:OtpItemWidth="@dimen/dimen_50"
                    app:OtpLineColor="@color/grey"
                    app:OtpViewType="rectangle"
                    android:layout_gravity="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_MB"
                    android:layout_width="0dp"
                    app:layout_constraintTop_toBottomOf="@id/pin_input"
                    app:layout_constraintStart_toEndOf="@id/left_GL"
                    app:layout_constraintEnd_toStartOf="@id/right_GL"
                    style="@style/WayaMaterialButton.Filled"
                    android:text="@string/confirm"
                    android:layout_marginTop="44dp"
                    android:layout_marginBottom="80dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>